--- a/A1_P1.ipynb
+++ b/A1_P1.ipynb
@@ -8,9 +8,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Imports"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-09T17:08:47.210503Z",
+     "start_time": "2023-11-09T17:08:41.624988300Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import torch\n",
@@ -26,18 +40,67 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Exercise 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "639d6e4b",
+   "metadata": {},
+   "source": [
+    "### Exercise 1. (A)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae82d1c7",
+   "metadata": {},
+   "source": [
+    "**Backpropagation** and **gradient descent** are like a dynamic duo in training deep neural networks (DNNs).\n",
+    "\n",
+    "**Backpropagation** is the process of updating the model's weights by calculating the gradient of the loss function with respect to the weights. It's all about figuring out how much each weight contributed to the error, layer by layer, starting from the output layer and working backward through the network. This info helps adjust the weights to minimize the error in future predictions.\n",
+    "\n",
+    "Now, **gradient descent** is the optimization technique that works hand-in-hand with backpropagation. It's all about finding the minimum of the loss function. The gradient (derivative) of the loss with respect to the weights tells us the direction of the steepest increase. Gradient descent takes steps in the opposite direction to minimize the loss.\n",
+    "\n",
+    "So, to sum it up, backpropagation fine-tunes the weights based on the error, and gradient descent guides this process by minimizing the error step by step. They team up to make our neural networks smarter!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3e5d18e",
+   "metadata": {},
+   "source": [
+    "#### References"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37abdddb",
+   "metadata": {},
+   "source": [
+    " - https://www.analyticsvidhya.com/blog/2023/01/gradient-descent-vs-backpropagation-whats-the-difference/#:~:text=To%20put%20it%20plainly%2C%20gradient,gradient%20descent%20relies%20on%20backpropagation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1cdbdc33",
+   "metadata": {},
+   "source": [
+    "### Exercise 1. (B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "outputs": [],
    "source": [
-    "############################################################### Functions for Part 1 b) ###############################################################\n",
-    "\n",
-    "\n",
     "def BCE_Loss(y_true, y_hat):\n",
     "    if y_true == y_hat:\n",
     "        return torch.tensor(0.)\n",
-    "    \n",
+    "\n",
     "    return -1 * (y_true * torch.log(y_hat) + (1 - y_true) * torch.log(1 - y_hat))\n",
     "\n",
     "\n",
@@ -87,19 +150,176 @@
     "    W[1] -= lr * dL_dW2\n",
     "    W[2] -= lr * dL_dW3\n",
     "\n",
-    "    return W\n",
+    "    return W"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-09T17:34:20.797852300Z",
+     "start_time": "2023-11-09T17:34:20.787330700Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-09T17:33:08.426675300Z",
+     "start_time": "2023-11-09T17:33:08.401129200Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "input_values = torch.tensor([[5., 4., 1., 3., 2.]])\n",
     "\n",
+    "y_true = torch.tensor([1.])\n",
     "\n",
-    "############################################################### Functions for Part 1 c) and d) ###############################################################\n",
+    "w1 = torch.tensor([[0.2, 0.2, 0.2, 0.2, 0.2],\n",
+    "                   [0.2, 0.2, 0.2, 0.2, 0.2],\n",
+    "                   [0.2, 0.2, 0.2, 0.2, 0.2]])\n",
     "\n",
+    "w2 = torch.tensor([[0.2, 0.2, 0.2],\n",
+    "                   [0.2, 0.2, 0.2]])\n",
     "\n",
+    "w3 = torch.tensor([[0.2, 0.2]])\n",
+    "\n",
+    "W = list([w1, w2, w3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-09T17:33:09.650782Z",
+     "start_time": "2023-11-09T17:33:09.623704600Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted Output (a3): 0.6726070046424866\n",
+      "Expected Output (y_true): 1.0\n",
+      "Binary Cross-Entropy Loss: 0.3965940773487091\n"
+     ]
+    }
+   ],
+   "source": [
+    "a3, a2, a1 = ForwardPass(input_values, W)\n",
+    "loss = BCE_Loss(y_true, a3)\n",
+    "\n",
+    "print(\"Predicted Output (a3):\", a3.item())\n",
+    "print(\"Expected Output (y_true):\", y_true.item())\n",
+    "print(\"Binary Cross-Entropy Loss:\", loss.item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-09T17:33:10.257815700Z",
+     "start_time": "2023-11-09T17:33:10.232677600Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dL_dW1: tensor([[-0.1310, -0.1048, -0.0262, -0.0786, -0.0524],\n",
+      "        [-0.1310, -0.1048, -0.0262, -0.0786, -0.0524],\n",
+      "        [-0.1310, -0.1048, -0.0262, -0.0786, -0.0524]])\n",
+      "dL_dW2: tensor([[-0.1964, -0.1964, -0.1964],\n",
+      "        [-0.1964, -0.1964, -0.1964]])\n",
+      "dL_dW3: tensor([[-0.5893, -0.5893]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "dL_dW1, dL_dW2, dL_dW3 = BackwardPass(input_values, a1, a2, a3, y_true, W)\n",
+    "\n",
+    "print(\"dL_dW1:\", dL_dW1)\n",
+    "print(\"dL_dW2:\", dL_dW2)\n",
+    "print(\"dL_dW3:\", dL_dW3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-09T17:33:10.416912Z",
+     "start_time": "2023-11-09T17:33:10.404816300Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updated W1: tensor([[0.2262, 0.2210, 0.2052, 0.2157, 0.2105],\n",
+      "        [0.2262, 0.2210, 0.2052, 0.2157, 0.2105],\n",
+      "        [0.2262, 0.2210, 0.2052, 0.2157, 0.2105]])\n",
+      "Updated W2: tensor([[0.2393, 0.2393, 0.2393],\n",
+      "        [0.2393, 0.2393, 0.2393]])\n",
+      "Updated W3: tensor([[0.3179, 0.3179]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "W = StochasticGradientDescent(dL_dW1, dL_dW2, dL_dW3, W, lr = 0.2)\n",
+    "\n",
+    "print(\"Updated W1:\", W[0])\n",
+    "print(\"Updated W2:\", W[1])\n",
+    "print(\"Updated W3:\", W[2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>After updating your weights what do you observe? Explain why.</h2>\n",
+    "<p>After computing the loss and doing a backward pass, and given that all weights were initialized with the value 2, we can see that none of the weights changed. Tracing back the steps made, we can see that all partial derivatives with respect to all the weights have a value of 0, which corroborates the fact that none of the weight's values changed. These partial derivatives measure the weight's variation in order for the loss of the neural network to decrease. So, the question now becomes, why all partial derivatives with respect to all weights show that no variation in their values is required in order to decrease the loss? Well, that's because the loss is already at its minimum, which is zero. Looking at how the binary loss is computed, we see that both the expected value and predicted value are exactly the same value, one, meaning that our network predicted perfectly the target. So, this means that there's no more room for improvement, and that's why all partial derivatives with respect to the weights are zero, and as consequence, the weight matrices didn't change.</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57464e93",
+   "metadata": {},
+   "source": [
+    "#### References"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://towardsdatascience.com/nothing-but-numpy-understanding-creating-binary-classification-neural-networks-with-e746423c8d5c"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 1. (C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "def set_device():\n",
     "    if torch.cuda.is_available():\n",
     "        device = torch.device('cuda')\n",
     "\n",
     "    elif torch.backends.mps.is_available():\n",
     "        device = torch.device('mps')\n",
-    "        \n",
+    "\n",
     "    else:\n",
     "        device = torch.device('cpu')\n",
     "    print('Device:', device)\n",
@@ -120,7 +340,7 @@
     "        x = F.leaky_relu(self.fc2(x))\n",
     "        x = self.fc3(x)\n",
     "        return x\n",
-    "    \n",
+    "\n",
     "\n",
     "# Define a more complex neural network\n",
     "class NeuralNetwork_Exercise1_d(torch.nn.Module):\n",
@@ -139,6 +359,7 @@
     "        self.leaky_relu = torch.nn.LeakyReLU(0.01)\n",
     "        self.relu = torch.nn.ReLU()\n",
     "        self.sigmoid = torch.nn.Sigmoid()\n",
+    "        #perguntar ao Luís sobre sigmoid\n",
     "        self.dropout_10 = torch.nn.Dropout(0.1)\n",
     "        self.dropout_20 = torch.nn.Dropout(0.2)\n",
     "        self.dropout_30 = torch.nn.Dropout(0.3)\n",
@@ -241,230 +462,10 @@
     "    print(f\"Accuracy on test set: {test_acc:.2f}%\")\n",
     "\n",
     "    return test_loss, test_acc"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Exercise 1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "639d6e4b",
-   "metadata": {},
-   "source": [
-    "## Exercise 1, a)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6459da99",
-   "metadata": {},
-   "source": [
-    "To optimize deep neural networks (DNN) backpropagation and gradient descent are often used.\n",
-    "Distinguish between these two algorithms, if there is any distinction, and explain how they can be\n",
-    "used for DNN optimization."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ae82d1c7",
-   "metadata": {},
-   "source": [
-    "\n",
-    "**Backpropagation vs. Gradient Descent for DNN Optimization**\n",
-    "\n",
-    "**Distinction**\n",
-    "\n",
-    "Backpropagation is an algorithm for calculating the gradient of a loss function with respect to the parameters of a neural network. Gradient descent is an algorithm for optimizing a function by iteratively moving in the direction of the negative gradient.\n",
-    "\n",
-    "How they can be used for DNN optimization\n",
-    "\n",
-    "Backpropagation is used to calculate the gradient of the loss function with respect to the weights of the neural network. This gradient is then used by gradient descent to update the weights in the direction of the negative gradient, which reduces the loss function.\n",
-    "\n",
-    "**Example**\n",
-    "\n",
-    "Consider a simple neural network with two inputs, one hidden layer, and one output. The loss function for this network could be the mean squared error between the predicted output and the ground truth output.\n",
-    "\n",
-    "To use backpropagation to calculate the gradient of the loss function with respect to the weights of the network, we would start at the output layer and work our way backwards. At each layer, we would calculate the error at that layer and then propagate it back to the previous layer. This process would continue until we reached the input layer.\n",
-    "\n",
-    "Once we have calculated the gradient of the loss function with respect to the weights of the network, we can use gradient descent to update the weights in the direction of the negative gradient. This will help the network to learn and reduce the loss function.\n",
-    "\n",
-    "Advantages and disadvantages\n",
-    "\n",
-    "**Backpropagation**\n",
-    "\n",
-    "Advantages:\n",
-    "Easy to implement\n",
-    "Efficient for calculating the gradient of the loss function with respect to the weights of a neural network\n",
-    "Disadvantages:\n",
-    "Can be computationally expensive for large neural networks\n",
-    "\n",
-    "**Gradient descent**\n",
-    "\n",
-    "Advantages:\n",
-    "Simple to implement\n",
-    "Efficient for optimizing a function by iteratively moving in the direction of the negative gradient\n",
-    "Disadvantages:\n",
-    "Can be prone to getting stuck in local minima\n",
-    "Conclusion\n",
-    "\n",
-    "Backpropagation and gradient descent are two essential algorithms for optimizing deep neural networks. Backpropagation is used to calculate the gradient of the loss function with respect to the weights of the network, while gradient descent is used to update the weights in the direction of the negative gradient. By combining these two algorithms, we can train deep neural networks to perform complex tasks."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d3e5d18e",
-   "metadata": {},
-   "source": [
-    "#### References"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "37abdddb",
-   "metadata": {},
-   "source": [
-    " - https://www.analyticsvidhya.com/blog/2023/01/gradient-descent-vs-backpropagation-whats-the-difference/#:~:text=To%20put%20it%20plainly%2C%20gradient,gradient%20descent%20relies%20on%20backpropagation."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1cdbdc33",
-   "metadata": {},
-   "source": [
-    "## Exercise 1, b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "input_values = torch.tensor([[5., 4., 1., 3., 2.]])\n",
-    "\n",
-    "y_true = torch.tensor([1.])\n",
-    "\n",
-    "w1 = torch.tensor([[0.2, 0.2, 0.2, 0.2, 0.2],\n",
-    "                   [0.2, 0.2, 0.2, 0.2, 0.2],\n",
-    "                   [0.2, 0.2, 0.2, 0.2, 0.2]])\n",
-    "\n",
-    "w2 = torch.tensor([[0.2, 0.2, 0.2],\n",
-    "                   [0.2, 0.2, 0.2]])\n",
-    "\n",
-    "w3 = torch.tensor([[0.2, 0.2]])\n",
-    "\n",
-    "W = list([w1, w2, w3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Predicted Output (a3): 0.6726070046424866\n",
-      "Expected Output (y_true): 1.0\n",
-      "Binary Cross-Entropy Loss: 0.3965940773487091\n"
-     ]
-    }
    ],
-   "source": [
-    "a3, a2, a1 = ForwardPass(input_values, W)\n",
-    "loss = BCE_Loss(y_true, a3)\n",
-    "\n",
-    "print(\"Predicted Output (a3):\", a3.item())\n",
-    "print(\"Expected Output (y_true):\", y_true.item())\n",
-    "print(\"Binary Cross-Entropy Loss:\", loss.item())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dL_dW1: tensor([[-0.1310, -0.1048, -0.0262, -0.0786, -0.0524],\n",
-      "        [-0.1310, -0.1048, -0.0262, -0.0786, -0.0524],\n",
-      "        [-0.1310, -0.1048, -0.0262, -0.0786, -0.0524]])\n",
-      "dL_dW2: tensor([[-0.1964, -0.1964, -0.1964],\n",
-      "        [-0.1964, -0.1964, -0.1964]])\n",
-      "dL_dW3: tensor([[-0.5893, -0.5893]])\n"
-     ]
-    }
-   ],
-   "source": [
-    "dL_dW1, dL_dW2, dL_dW3 = BackwardPass(input_values, a1, a2, a3, y_true, W)\n",
-    "\n",
-    "print(\"dL_dW1:\", dL_dW1)\n",
-    "print(\"dL_dW2:\", dL_dW2)\n",
-    "print(\"dL_dW3:\", dL_dW3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Updated W1: tensor([[0.2262, 0.2210, 0.2052, 0.2157, 0.2105],\n",
-      "        [0.2262, 0.2210, 0.2052, 0.2157, 0.2105],\n",
-      "        [0.2262, 0.2210, 0.2052, 0.2157, 0.2105]])\n",
-      "Updated W2: tensor([[0.2393, 0.2393, 0.2393],\n",
-      "        [0.2393, 0.2393, 0.2393]])\n",
-      "Updated W3: tensor([[0.3179, 0.3179]])\n"
-     ]
-    }
-   ],
-   "source": [
-    "W = StochasticGradientDescent(dL_dW1, dL_dW2, dL_dW3, W, lr = 0.2)\n",
-    "\n",
-    "print(\"Updated W1:\", W[0])\n",
-    "print(\"Updated W2:\", W[1])\n",
-    "print(\"Updated W3:\", W[2])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h2>After updating your weights what do you observe? Explain why.</h2>\n",
-    "<p>After computing the loss and doing a backward pass, and given that all weights were initialized with the value 2, we can see that none of the weights changed. Tracing back the steps made, we can see that all partial derivatives with respect to all the weights have a value of 0, which corroborates the fact that none of the weight's values changed. These partial derivatives measure the weight's variation in order for the loss of the neural network to decrease. So, the question now becomes, why all partial derivatives with respect to all weights show that no variation in their values is required in order to decrease the loss? Well, that's because the loss is already at its minimum, which is zero. Looking at how the binary loss is computed, we see that both the expected value and predicted value are exactly the same value, one, meaning that our network predicted perfectly the target. So, this means that there's no more room for improvement, and that's why all partial derivatives with respect to the weights are zero, and as consequence, the weight matrices didn't change.</p>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "57464e93",
-   "metadata": {},
-   "source": [
-    "#### References"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "https://towardsdatascience.com/nothing-but-numpy-understanding-creating-binary-classification-neural-networks-with-e746423c8d5c"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Exercise 1, c)"
-   ]
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
@@ -2540,13 +2541,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 1, e)"
+    "## Exercise 1. (E)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    " - **computacional cost:** Neural network A, having less neurons in the hidden layers will lead to a smaller number of weights (Wi) associated with those neurons and, therefore, this leads to less time in the training process. This is because fewer parameters need to be updated, leading to faster processing times.\n",
+    "  - **Generalization:** Network A generalize better on the test data, because with more hidden layers the Neural Network is forced not to memorize the data, and learn more efficient representations of the input data instead.\n",
+    "   - **Feature Extraction**: Because of the number of hidden layers, the 3x10 architecture has a greater opportunity to learn/extract more complex patterns in the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
