RNN's backprop correctly implemented, but needs a second check

--- a/A1_P2.ipynb
+++ b/A1_P2.ipynb
@@ -61,39 +61,58 @@
     "\n",
     "\n",
     "def BackPropagation(input_values, hidden_states, initial_hidden_state, v, y_true, y_hat):\n",
-    "    # Partial derivative of the loss with respect to the loss at t = 2\n",
-    "    dL_dL2 = 1\n",
-    "    # Partial derivative of the loss with respect to the loss at t = 2\n",
-    "    dL_dL1 = 1\n",
-    "    # Partial derivative of the loss with respect to the second hidden state\n",
-    "    dL_dh2 = dL_dL2 * (-1 * (y_true[1] / y_hat[1] - (1 - y_true[1]) / (1 - y_hat[1])))\n",
-    "    # Partial derivative of the loss with respect to the argument of the sigmoid at t = 2\n",
-    "    dL_da2 =  dL_dh2 * (y_hat[1] * (1 - y_hat[1]))\n",
-    "    # Partial derivative of the loss with respect to the weights at t = 2\n",
-    "    dL_dW2 = dL_da2 * input_values[1]\n",
-    "    # Partial derivative of the loss with respect to the bias at t = 2\n",
-    "    dL_db2 = dL_da2 * 1\n",
-    "    # Partial derivative of the loss with respect to v at t = 2\n",
-    "    dL_dv2 = dL_da2 * hidden_states[0]\n",
-    "    # Partial derivative of the loss with respect to the first hidden state...\n",
-    "    #... Combining the two dependencies present in the computational graph\n",
-    "    dL_dh1 = (dL_da2 * v) + (dL_dL1 * (-1 * (y_true[0] / y_hat[0] - (1 - y_true[0]) / (1 - y_hat[0]))))\n",
-    "    # Partial derivative of the loss with respect to the argument of the sigmoid at t = 1\n",
-    "    dL_da1 = dL_dh1 * (y_hat[0] * (1 - y_hat[0]))\n",
-    "    # Partial derivative of the loss with respect to the weights at t = 1\n",
-    "    dL_dW1 = dL_da1 * input_values[0]\n",
-    "    # Partial derivative of the loss with respect to the bias at t = 2\n",
-    "    dL_db1 = dL_da1 * 1\n",
-    "    # Partial derivative of the loss with respect to v at t = 2\n",
-    "    dL_dv1 = dL_da1 * initial_hidden_state\n",
-    "    # Partial derivative of the loss with respect to the weights\n",
-    "    dL_dW = dL_dW2 + dL_dW1\n",
-    "    # Partial derivative of the loss with respect to the bias\n",
-    "    dL_db = dL_db2 + dL_db1\n",
-    "    # Partial derivative of the loss with respect to the weights\n",
-    "    dL_dv = dL_dv2 + dL_dv1\n",
+    "    # Backpropagation for time step t=2\n",
     "\n",
-    "    return dL_dW, dL_dv, dL_db\n",
+    "    # Compute gradient of loss with respect to output at t=2\n",
+    "    dL2_dh2 = -1 * (y_true[1] / y_hat[1] - (1 - y_true[1]) / (1 - y_hat[1]))\n",
+    "    # Compute gradient of output with respect to pre-activation at t=2\n",
+    "    dL2_da2 = dL2_dh2 * (y_hat[1] * (1 - y_hat[1]))\n",
+    "    # Compute gradient of pre-activation with respect to weights at t=2\n",
+    "    dL2_dW2 = dL2_da2 * input_values[1]\n",
+    "    # Compute gradient of pre-activation with respect to previous hidden state at t=2\n",
+    "    dL2_dv2 = dL2_da2 * hidden_states[0]\n",
+    "    # Compute gradient of pre-activation with respect to bias at t=2\n",
+    "    dL2_db2 = dL2_da2 * 1\n",
+    "    # Compute gradient of pre-activation with respect to hidden state at t=1\n",
+    "    dL2_dh1 = dL2_da2 * v\n",
+    "    # Compute gradient of hidden state with respect to pre-activation at t=1\n",
+    "    dL2_da1 = dL2_dh1 * (y_hat[0] * (1 - y_hat[0]))\n",
+    "    # Compute gradient of pre-activation with respect to weights at t=1\n",
+    "    dL2_dW1 = dL2_da1 * input_values[0]\n",
+    "    # Compute gradient of pre-activation with respect to initial hidden state\n",
+    "    dL2_dv1 = dL2_da1 * initial_hidden_state\n",
+    "    # Compute gradient of pre-activation with respect to bias at t=1\n",
+    "    dL2_db1 = dL2_da1 * 1\n",
+    "    # Accumulate gradients for time step t=2\n",
+    "    dL2_dW = dL2_dW2 + dL2_dW1\n",
+    "    dL2_dV = dL2_dv2 + dL2_dv1\n",
+    "    dL2_dB = dL2_db2 + dL2_db1\n",
+    "\n",
+    "    # Backpropagation for time step t=1\n",
+    "\n",
+    "    # Compute gradient of loss with respect to output at t=1\n",
+    "    dL1_dh1 = -1 * (y_true[0] / y_hat[0] - (1 - y_true[0]) / (1 - y_hat[0]))\n",
+    "    # Compute gradient of output with respect to pre-activation at t=1\n",
+    "    dL1_da1 = dL1_dh1 * (y_hat[0] * (1 - y_hat[0]))\n",
+    "    # Compute gradient of pre-activation with respect to weights at t=1\n",
+    "    dL1_dW1 = dL1_da1 * input_values[0]\n",
+    "    # Compute gradient of pre-activation with respect to initial hidden state\n",
+    "    dL1_dv1 = dL1_da1 * initial_hidden_state\n",
+    "    # Compute gradient of pre-activation with respect to bias at t=1\n",
+    "    dL1_db1 = dL1_da1 * 1\n",
+    "    # Accumulate gradients for time step t=1\n",
+    "    dL1_dW = dL1_dW1\n",
+    "    dL1_dV = dL1_dv1\n",
+    "    dL1_dB = dL1_db1\n",
+    "\n",
+    "    # Overall gradients\n",
+    "\n",
+    "    # Sum gradients for both time steps\n",
+    "    dL_dW = dL2_dW + dL1_dW\n",
+    "    dL_dV = dL2_dV + dL1_dV\n",
+    "    dL_dB = dL2_dB + dL1_dB\n",
+    "\n",
+    "    return dL_dW, dL_dV, dL_dB\n",
     "\n",
     "\n",
     "def StochasticGradientDescent(weights, grad_w, v, grad_v, bias, grad_b, learning_rate):\n",
@@ -365,7 +384,7 @@
      "output_type": "stream",
      "text": [
       "Partial derivative of the loss with respect to the weights:   tensor([-0.1021,  0.1310])\n",
-      "Partial derivative of the loss with respect to the bias:      -0.08872339129447937\n",
+      "Partial derivative of the loss with respect to the bias:      -0.08872342109680176\n",
       "Partial derivative of the loss with respect to v:             tensor([0.1888])\n",
       "\n",
       "New weight matrix after applying SGD:                         tensor([[ 1.0102, -1.0131]])\n",
@@ -417,7 +436,7 @@
      "output_type": "stream",
      "text": [
       "Epoch 0: cost = 0.9481539726257324\n",
-      "Epoch 20: cost = 0.6953017711639404\n",
+      "Epoch 20: cost = 0.6953017115592957\n",
       "Epoch 40: cost = 0.4493806064128876\n",
       "Epoch 60: cost = 0.28732624650001526\n",
       "Epoch 80: cost = 0.19744902849197388\n",
@@ -426,7 +445,7 @@
       "Epoch 140: cost = 0.0938035100698471\n",
       "Epoch 160: cost = 0.07901700586080551\n",
       "Epoch 180: cost = 0.06809427589178085\n",
-      "Epoch 200: cost = 0.05972800776362419\n",
+      "Epoch 200: cost = 0.059727881103754044\n",
       "Epoch 220: cost = 0.053132057189941406\n",
       "Epoch 240: cost = 0.04780818521976471\n",
       "Epoch 260: cost = 0.04342692345380783\n",
