Minor changes added

--- a/A1_P2.ipynb
+++ b/A1_P2.ipynb
@@ -119,11 +119,11 @@
     "\n",
     "def StochasticGradientDescent(weights, grad_w, v, grad_v, bias, grad_b, learning_rate):\n",
     "\n",
-    "    grad_w = weights - learning_rate * grad_w\n",
-    "    grad_b = bias - learning_rate * grad_b\n",
-    "    grad_v = v - learning_rate * grad_v\n",
+    "    weights = weights - learning_rate * grad_w\n",
+    "    bias = bias - learning_rate * grad_b\n",
+    "    v = v - learning_rate * grad_v\n",
     "\n",
-    "    return grad_w, grad_v, grad_b\n",
+    "    return weights, v, bias\n",
     "\n",
     "# Implement a simple RNN that only updates the weights\n",
     "def SimpleRNN(input_values, y_true, weights, v, bias, learning_rate = 0.1, epochs = 1000):\n",
